* troff: The "\{", "\}", and "\x" escape sequences inhibited kerning in
  the adjustment computation but not in the output routine, which could
  lead to prolongated output lines. They now inhibit kerning completely.
* nroff: The content of a "\X" function is now ignored (instead of being
  printed with zero width).
* nroff: Combining UTF-8 characters are now assumed to have width zero.

Release 061114
* [nt]roff: The units "t" (printer's point), "T" (printer's pica), "D"
  (Didot point) and "C" (cicero) have been introduced.
* [nt]roff: ".ad p" mode no longer employs a temporary diversion; the
  lines are now written directly to the current output level, possibly
  interrupted by trap processing. This makes it possible to use "'in"
  and ".ll" inside a paragraph, although the line breaking decisions
  may be suboptimal in this case.
* [nt]roff: The ".hypp" request now accepts a third argument specifying
  a penalty for hyphenating the last word of a paragraph.
* nroff: Characters are now internally stored as 64-bit integers as
  in troff. As a consequence, hyphenation of words in international
  languages now works if non-ASCII characters are involved.
* [nt]roff: A memory allocation error that could occur with extensive
  use of output-line traps has been fixed.
* [nt]roff: A control character written in a diversion is now correctly
  interpreted when the diversion is re-read (unless in groff compatibility
  mode). This fixes the ".AU" macro of "-mm".
* [nt]roff: The "\R" escape sequence works correctly again; in the last
  release, it had inserted the letter "R" into the text.
* [nt]roff: Long names including a string in their name are now handled
  correctly, e.g. ".nr x\*yz 1" no longer tries to set the register "x\*y"
  to the value "z".
* [nt]roff: Fixed some more memory access problems that had been introduced
  with support for local variables.
* [nt]roff: Fixed a non-local goto error that could lead to segmentation