@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	8.19 (gritter) 11/14/06";
+	"@(#)/usr/ucb/otfdump.sl	8.20 (gritter) 11/16/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  8.19 (gritter) 11/14/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 8.19 (gritter) 11/14/06";
+static const char sccsid[] USED = "@(#)dpost.sl  8.20 (gritter) 11/16/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 8.20 (gritter) 11/16/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	8.19 (gritter) 11/14/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	8.20 (gritter) 11/16/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	8.19 (gritter) 11/14/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	8.20 (gritter) 11/16/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "8.19";
+const char revision[] = "8.20";
 /* SLIST */
 /*
 ext.h: * Sccsid @(#)ext.h	1.102 (gritter) 11/5/06
@@ -25,7 +25,7 @@ n1.c: * Sccsid @(#)n1.c	1.136 (gritter) 11/13/06
 n2.c: * Sccsid @(#)n2.c	1.44 (gritter) 11/14/06
 n3.c: * Sccsid @(#)n3.c	1.178 (gritter) 11/13/06
 n4.c: * Sccsid @(#)n4.c	1.96 (gritter) 11/12/06
-n5.c: * Sccsid @(#)n5.c	1.121 (gritter) 11/13/06
+n5.c: * Sccsid @(#)n5.c	1.122 (gritter) 11/16/06
 n7.c: * Sccsid @(#)n7.c	1.163 (gritter) 11/14/06
 n8.c: * Sccsid @(#)n8.c	1.39 (gritter) 11/13/06
 n9.c: * Sccsid @(#)n9.c	1.67 (gritter) 11/14/06
